Solucionado error login

--- a/site_media/html/usuario_registro.html
+++ b/site_media/html/usuario_registro.html
@@ -1,11 +1,11 @@
 <form id="login_usuario" action="{LOGIN}" method="POST">
 	<div class="item_requerid">Email</div>
 	<div class="form_requerid">
-		<input type="text" name="user" id="user">
+		<input type="text" name="email" id="email">
 	</div>
 	<div class="item_requerid">Clave</div>
 	<div class="form_requerid">
-		<input type="text" name="psw" id="psw">
+		<input type="text" name="clave" id="clave">
 	</div>
 	<div class="form_button">
 		<input type="submit" name="enviar" id="enviar" value="Entrar">
